# ticorates

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  publish.yml  test-and-publish.yml
bruno/: bruno.json  get-by-date.bru  get-latest.bru  get-range.bru
bruno/bccr/: download-cuadros.bru  get-cuadro-metadata.bru  get-indicator-series.bru
bruno/environments/: production.bru
mcp_server/: server.py
tests/api/: test_routes.py
tests/clients/: test_bccr_client.py
tests/core/: test_single_flight.py
tests/mcp/: test_server.py
tests/repository/: test_rates_repository.py
tests/services/: test_rates_service.py
tests/stress/: stress_test.py
ticorates/: main.py
ticorates/api/: routes.py
ticorates/clients/: bccr_client.py  indicators.json  indicators.py
ticorates/core/: config.py  database.py  dependencies.py  exceptions.py  single_flight.py
ticorates/models/: database.py  domain.py
ticorates/repository/: rates_repository.py
ticorates/services/: rates_service.py
