[project]
name = "ticorates-mcp"
version = "1.0.4"
description = "Public exchange rate API for Costa Rica, powered by BCCR"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-env>=1.0.0",
]

[project.scripts]
ticorates-mcp = "mcp_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ticorates", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = ["BCCR_API_KEY=test-api-key", "BCCR_BASE_URL=https://api.bccr.test"]
addopts = "-m 'not stress'"
markers = [
    "stress: full integration tests against a live server and real BCCR API — run manually",
]

[tool.ruff]
line-length = 120
